More use of Records and `.toList()`, disabled some redundant e2e tests (#465)
* cleanup